# argparser

./: LICENSE  README.rst  pyproject.toml
argparser/: __main__.py  app.py
examples/: script.sh
tests/: test_add.py  test_setup.py
